# urban-energy-core

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: data_contracts.md  hub_integration.md  synpop_integration.md
notebooks/: capabilities_walkthrough.ipynb  montreal_city_walkthrough.ipynb
scripts/: example_capabilities.py  export_montreal_hub_sample.py  inspect_data_root.py  run_core_benchmark.py
src/urban_energy_core/: __init__.py  config.py
src/urban_energy_core/domain/: __init__.py  building.py  city.py  da.py  energy_entity.py  fsa.py  spatial_unit.py
src/urban_energy_core/integrations/: __init__.py  hub.py  synpop.py
src/urban_energy_core/io/: __init__.py  load_data.py
src/urban_energy_core/pipelines/: __init__.py  build_city.py  core_workflows.py
src/urban_energy_core/plotting/: __init__.py  _legacy.py  city.py  diagnostics.py
src/urban_energy_core/services/: __init__.py  anomalies.py  imputation.py  normalization.py  preprocess.py  prism.py  short_term.py
tests/: test_build_city_da_without_electricity.py  test_build_city_with_da.py  test_city_da_and_metric_composition.py  test_da_census_loader_aliases.py  test_da_loaders_and_workflows.py  test_geometry_loader_aliases.py  test_hub_integration.py  test_imports.py  test_montreal_building_loaders.py  test_montreal_inventory_numeric_init.py  test_spatial_unit_and_buildings.py  test_synpop_integration.py  test_workflows_smoke.py
