[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-energy-core"
version = "0.1.0"
description = "Core electricity, weather, census, geometry, and city-object workflows for urban energy analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mohammad Hamsa" }
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "statsmodels",
  "geopandas",
  "plotly",
  "pyarrow",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
]
notebooks = [
  "jupyterlab",
  "ipykernel",
  "contextily",
  "nbconvert",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
